--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,35 @@
+# Mac OS X notes
+#
+# - current Travis CI environment is Mac OS X 10.9.5 (Mavericks),
+#   released 2013
+# - current Boost from Homebrew is 1.60 - and produces link errors
+#   with gcc (when linking Boost Regex)
+# - as-is, travis has /usr/local/bin/g++-{4.2,4.6,4.8,4.9}
+
+# Ubuntu Trusty notes
+#
+# - default GCC is too old (4.8)
+# - default Boost is too old (1.54)
+
 language: cpp
 
 env:
-  - CMAKE_BUILD_TYPE=Debug
+  #- CMAKE_BUILD_TYPE=Debug
+  # Apple's clang 3.5 doesn't support sanitize options
+  # although the upstream 3.5 does ...
+  - CMAKE_BUILD_TYPE=DEBUG    MY_CXX=clang++     MY_CC=clang
+  # clang 3.7 from Homebrew understands all sanitize flags
+  # but the runtime libraries aren't available
+  #- CMAKE_BUILD_TYPE=Sanitize MY_CXX=clang++-3.7 MY_CC=clang-3.7
+  - CMAKE_BUILD_TYPE=Debug    MY_CXX=clang++-3.7 MY_CC=clang-3.7
+  - CMAKE_BUILD_TYPE=Release  MY_CXX=clang++-3.7 MY_CC=clang-3.7
 
 compiler:
-  #- gcc
-  # disabling for now because the default clang is to old (3.5)
-  # and Homebrew doesn't provide a pre-built package. Also,
-  # Homebrew only has 3.6 - and not 3.7.
-  # cf. http://apple.stackexchange.com/questions/227026/how-to-install-recent-clang-with-homebrew
-  # TODO: Homebrew-Versions seems to have 3.7, though
+  # use envionment variables to define other compilers
   - clang
 
 os:
+  # TODO enable trusty again (exclude os x env, install newer compilers, boost)
   #  - linux
   - osx
 
@@ -21,9 +38,8 @@ sudo: required
 dist: trusty
 
 before_install:
-  # apparently there are sudo-wrappers for apt-get/brew
+  # apparently there are sudo-wrappers for brew
   # thus, sudo can be omitted
-  - if [ "$TRAVIS_OS_NAME" = linux ]; then apt-get install -qq ragel ; fi
   - if [ "$TRAVIS_OS_NAME" = osx   ]; then brew update ; fi
   - if [ "$TRAVIS_OS_NAME" = osx   ]; then brew tap homebrew/versions ; fi
   - if [ "$TRAVIS_OS_NAME" = osx   ]; then brew install ragel ; fi
@@ -35,32 +51,29 @@ before_install:
   # ( -> we need at least 1.58)
   - if [ "$TRAVIS_OS_NAME" = osx   ]; then brew unlink boost ; fi
   - if [ "$TRAVIS_OS_NAME" = osx   ]; then brew install boost ; fi
-  # as-is, travis has /usr/local/bin/g++-{4.2,4.6,4.8,4.9}
   # this would give us 5.3 (or higher)
   #- if [ "$TRAVIS_OS_NAME" = osx -a "$CXX" = g++  ]; then brew unlink gcc ; fi
   #- if [ "$TRAVIS_OS_NAME" = osx -a "$CXX" = g++  ]; then brew install gcc ; fi
-  #- if [ "$TRAVIS_OS_NAME" = osx -a "$CXX" = clang++  ]; then brew install llvm ; fi
+  # cf. http://apple.stackexchange.com/questions/227026/how-to-install-recent-clang-with-homebrew
   - if [ "$TRAVIS_OS_NAME" = osx -a "$CXX" = clang++ ]; then brew install llvm37 ; fi
 
 install:
+  - sw_vers
   - uname -a
-  - find /usr/local/ '(' -type f -or -type l ')'  '(' -name 'g++*' -or -name 'clang++*' ')'
-  - find /usr/local/ -name 'libboost*' -ls
-  - brew --prefix boost
-  - brew cat boost
-  - ls -l /usr/local/opt/boost/lib/libboost_regex-mt.dylib
-  - nm -gU /usr/local/opt/boost/lib/libboost_regex-mt.dylib
+  #- find /usr/local/ '(' -type f -or -type l ')'  '(' -name 'g++*' -or -name 'clang++*' ')'
+  #- find /usr/local/ -name 'libboost*' -ls
+  #- brew --prefix boost
+  #- brew cat boost
+  #- ls -l /usr/local/opt/boost/lib/libboost_regex-mt.dylib
+  #- nm -gU /usr/local/opt/boost/lib/libboost_regex-mt.dylib
 
 # BOOST_ROOT doesn't have to be explicitly set on OS X since
-# Homebrew installs it directly under /usr/local
+# Homebrew directly links it under /usr/local
 before_script:
   - mkdir build
   - cd build
   # PWD -> build
-  #- if [ "$TRAVIS_OS_NAME" = osx -a "$CXX" = g++  ]; then CXX=$(brew --prefix gcc)/bin/g++-5 CC=$(brew --prefix gcc)/bin/gcc cmake -G Ninja -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE .. ; fi
-  - if [ "$TRAVIS_OS_NAME" = osx -a "$CXX" = g++  ]; then BOOST_ROOT=$(brew --prefix boost) CXX=g++-4.9 CC=gcc-4.9 cmake -G Ninja -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE .. ; fi
-    #- if [ "$TRAVIS_OS_NAME" = osx -a "$CXX" = clang++  ]; then CXX=$(brew --prefix llvm)/bin/clang++ CC=$(brew --prefix llvm)/bin/clang cmake -G Ninja -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE .. ; fi
-  - if [ "$TRAVIS_OS_NAME" = osx -a "$CXX" = clang++  ]; then CXX=clang++-3.7 CC=clang-3.7 cmake -G Ninja -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE .. ; fi
+  - CXX=$MY_CXX CC=$MY_CC cmake -G Ninja -DCMAKE_BUILD_TYPE=$CMAKE_BUILD_TYPE ..
 
 # PWD -> build
-script: ninja -j1 bed check
+script: ninja -j1 bed xfsx xfsx_static check
