--- a/.travis.yml
+++ b/.travis.yml
@@ -28,16 +28,18 @@ matrix:
       compiler: clang
       # Apple's clang 3.5 doesn't support sanitize options
       # although the upstream 3.5 does ...
-      env: CMAKE_BUILD_TYPE=DEBUG    MY_CXX=clang++     MY_CC=clang
+      env: CMAKE_BUILD_TYPE=Coverage    MY_CXX=clang++     MY_CC=clang
     - os: osx
       compiler: clang
       # clang 3.7 from Homebrew understands all sanitize flags
       # but the runtime libraries aren't available
       #- CMAKE_BUILD_TYPE=Sanitize MY_CXX=clang++-3.7 MY_CC=clang-3.7
       env: CMAKE_BUILD_TYPE=Debug    MY_CXX=clang++-3.7 MY_CC=clang-3.7
-    - os: osx
-      compiler: clang
-      env: CMAKE_BUILD_TYPE=Coverage MY_CXX=clang++-3.7 MY_CC=clang-3.7
+    # with clang 3.7 from Homebrew, the libclang_rt.profile_osx.a os
+    # not available ... thus linking fails
+    # - os: osx
+    #  compiler: clang
+    #  env: CMAKE_BUILD_TYPE=Coverage MY_CXX=clang++-3.7 MY_CC=clang-3.7
     - os: osx
       compiler: clang
       env: CMAKE_BUILD_TYPE=Release  MY_CXX=clang++-3.7 MY_CC=clang-3.7
