Depend on generated script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,7 +251,7 @@ IF(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
 
   add_custom_target(completion DEPENDS bed.bash)
 
-  add_custom_target(check-completion COMMAND bash bed.bash)
+  add_custom_target(check-completion COMMAND bash bed.bash DEPENDS completion)
 endif()
 
 
