Add Lua based value pretty printer
i.e. the the general interfacing and a concrete example for TAP files.
The 'interesting' features of TAP pretty-printing is that some of it is
context dependent and that a lot of lookup tables are used. That means
lookup tables that are part of the current file but also static ones.

All this can be rapidly developer using a Lua module, thus also adjusted
for other formats.

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "libgrammar"]
 	path = libgrammar
 	url = https://github.com/gsauthof/libgrammar.git
+[submodule "sol2"]
+	path = sol2
+	url = https://github.com/gsauthof/sol2.git
