--- a/.gitmodules
+++ b/.gitmodules
@@ -21,4 +21,4 @@
 	url = https://github.com/gsauthof/libgrammar.git
 [submodule "sol2"]
 	path = sol2
-	url = https://github.com/gsauthof/sol2.git
+	url = https://github.com/ThePhD/sol2.git
