Error out if Lua support is enabled but not found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,8 +95,17 @@ if (XFSX_USE_LUA)
     else()
       # some hints for Mac OSX ...
       find_library(LUA_LIB NAMES lua)
+      if (NOT LUA_LIB)
+        message(FATAL_ERROR "lua library not found")
+      endif()
       find_path(LUAXX_INCLUDE_DIR lua.hpp)
+      if (NOT LUAXX_INCLUDE_DIR)
+        message(FATAL_ERROR "lua.hpp not found")
+      endif()
       find_path(LUA_INCLUDE_DIR lua.h)
+      if (NOT LUA_INCLUDE_DIR)
+        message(FATAL_ERROR "lua.h not found")
+      endif()
     endif()
   endif()
 endif()
