--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = libixxx
 	url = https://github.com/gsauthof/libixxx.git
 [submodule "cppformat"]
-	path = cppformat
+	path = fmt
 	url = https://github.com/cppformat/cppformat.git
 [submodule "libixxxutil"]
 	path = libixxxutil
