update fmtlib and switch to header-only usage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ IF(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
   add_subdirectory(libgrammar)
   set(OLD_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
   set(BUILD_SHARED_LIBS true)
-  add_subdirectory(fmt)
+  add_subdirectory(fmt EXCLUDE_FROM_ALL)
   set(BUILD_SHARED_LIBS ${OLD_BUILD_SHARED_LIBS})
 endif()
 
@@ -148,21 +148,22 @@ set(LIB_SRC
 add_library(xfsx SHARED
   ${LIB_SRC}
   )
-target_link_libraries(xfsx
+target_link_libraries(xfsx PRIVATE
   #${Boost_FILESYSTEM_LIBRARY}
   #${Boost_SYSTEM_LIBRARY}
   ${Boost_REGEX_LIBRARY}
   ${XML2_LIB}
-  fmt
   grammar
   ixxxutil
   ixxx
   xxxml
   ${LUA_LIB}
   )
+target_link_libraries(xfsx PRIVATE fmt::fmt-header-only)
 add_library(xfsx_static STATIC
   ${LIB_SRC}
   )
+target_link_libraries(xfsx_static PRIVATE fmt::fmt-header-only)
 
 # under windows shared/static libraries have the same extension ...
 if(UNIX)
@@ -216,8 +217,6 @@ IF(CMAKE_PROJECT_NAME STREQUAL "xfsx")
     test/xfsx/search.cc
 
     ${BED_SRC}
-
-    ${CMAKE_SOURCE_DIR}/fmt/format.cc
   )
   set_property(TARGET ut PROPERTY INCLUDE_DIRECTORIES
     ${XML2_INCLUDE_DIR}
@@ -250,8 +249,6 @@ endif() # CMAKE_PROJECT_NAME
 add_executable(bed
   bed/main.cc
   ${BED_SRC}
-  
-  ${CMAKE_SOURCE_DIR}/fmt/format.cc
   )
 target_compile_definitions(bed PRIVATE -DSOL_USE_BOOST=1)
 target_compile_definitions(xfsx PRIVATE -DSOL_USE_BOOST=1)
@@ -305,22 +302,18 @@ IF(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
   add_executable(ber2xml_fuzzer
     tool/ber2xml_fuzzer.cc
     test/test.cc
-    ${CMAKE_SOURCE_DIR}/fmt/format.cc
   )
   add_executable(ber2lxml_fuzzer
     tool/ber2lxml_fuzzer.cc
     test/test.cc
-    ${CMAKE_SOURCE_DIR}/fmt/format.cc
   )
   add_executable(ber2lxml_back_fuzzer
     tool/ber2lxml_back_fuzzer.cc
     test/test.cc
-    ${CMAKE_SOURCE_DIR}/fmt/format.cc
   )
   add_executable(xml2ber_fuzzer
     tool/xml2ber_fuzzer.cc
     test/test.cc
-    ${CMAKE_SOURCE_DIR}/fmt/format.cc
   )
   set_property(TARGET ber2xml_fuzzer ber2lxml_back_fuzzer ber2lxml_fuzzer
     xml2ber_fuzzer
