--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/gsauthof/libixxx.git
 [submodule "cppformat"]
 	path = fmt
-	url = https://github.com/cppformat/cppformat.git
+	url = https://github.com/fmtlib/fmt.git
 [submodule "libixxxutil"]
 	path = libixxxutil
 	url = https://github.com/gsauthof/libixxxutil.git
